Bump the perm gen allocation (to 512m from 256m) for cross build perf tests.